--- a/books-app/src/main/resources/templates/search.html
+++ b/books-app/src/main/resources/templates/search.html
@@ -23,36 +23,29 @@
      <div class="container">
 
       <nav class="navbar navbar-expand-lg navbar-light bg-light"  style="padding-bottom: 20px">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="/">Better Reads</a>
-        
-        </div>
-     </nav>
+         <div class="container-fluid">
+           <a class="navbar-brand" href="/">Better Reads</a>
+         
+         </div>
+      </nav>
         
       <div th:insert="components/book-search :: search-panel"></div>
        <section class="content">
 
-         <div class="card">
-           <div class="row g-0">
-             <div class="col-md-4">
-               <img th:src="${coverImage}"
-                 class="img-fluid rounded-start" alt="...">
-             </div>
-             <div class="col-md-8">
-               <div class="card-body">
-                 <h5 class="card-title display-1" th:text="${book.name}">Name</h5>
-                 <p class="card-text display-5" th:text="${book.authorNames}">Author name</p>
-                 <p class="card-text" th:text="${book.description}">Book description</p>
-                 <p class="card-text">Published Date: <small class="text-muted" th:text="${book.publishedDate}">2020-01-01</small></p>
+            <div class="card-group">
 
-               </div>
+                <div class="card" style="flex: 0 0 28%; margin: 20px" th:each="result: ${searchResults}">
+                    <img th:src="${result.coverId}" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title" th:text="${result.title}">Card title</h5>
+                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                      <a href="#" th:href="@{'/book/' + ${result.key}}" class="btn btn-primary">View Book</a>
+                    </div>
+                </div>
 
-             </div>
-           </div>
-         </div>
-
-
-       </section>
+            </div>
+    
+        </section>
 
      </div>
    </body>
