--- a/books-app/src/main/resources/templates/book.html
+++ b/books-app/src/main/resources/templates/book.html
@@ -70,10 +70,10 @@
                     <label for="status" class="form-label">Status</label>
                     <select id = "readingStatus" name = "readingStatus" class="form-select" 
                       th:field="${userBooks.readingStatus}" aria-label="Reading Status">
-                      <option selected value = "0">Select</option>
-                      <option value="readig">Reading</option>
-                      <option value="finished">Finished</option>
-                      <option value="notStarted">Not Started</option>
+                      <option selected value = "3">Select</option>
+                      <option value="0-reading">Reading</option>
+                      <option value="1-finished">Finished</option>
+                      <option value="2-notStarted">Not Started</option>
                     </select>
                   </div>
 
